# BudgetApp

./: .gitIgnore  CMakeLists.txt  Readme.md  main.cpp
csvLibrary/: CSVReader.cpp  CSVReader.h
include/: BudgetManager.h  Transaction.h
libs/csvLibrary/: CSVReader.cpp  CSVReader.h
src/: BudgetManager.cpp
